kernel/atomgit/ipv4_ ip_gre_ 修复 IPv4-only 编译时变量未使用警告.txt
#标题
ipv4: ip_gre: 修复 IPv4-only 编译时变量未使用警告

#内核版本
OLK-6.6

#问题现象
在使能 CONFIG_NET_IPGRE 但禁用 CONFIG_IPV6 的编译环境下，编译过程中触发编译错误，导致内核构建失败。

#主要错误日志
net/ipv4/ip_gre.c: In function ‘ipgre_err’:
net/ipv4/ip_gre.c:144:22: error: variable ‘data_len’ set but not used [-Werror=unused-but-set-variable]
  144 |         unsigned int data_len = 0;
      |                      ^~~~~~~~

#问题根因
在函数 ipgre_err() 中定义了变量 data_len，并在 ICMP_TIME_EXCEEDED 处理分支中对其赋值，但该变量的实际使用逻辑位于 `#if IS_ENABLED(CONFIG_IPV6)` 条件编译块内。当内核配置禁用 IPv6 时，该变量仅被赋值但未被使用，触发编译器“set but not used”错误，导致编译失败。

#解决方案
将变量 data_len 的定义及赋值逻辑从公共代码段移动到 `#if IS_ENABLED(CONFIG_IPV6)` 条件编译块内部。这确保了只有在 IPv6 功能启用时变量才存在并被使用，避免了 IPv4-only 配置下的未使用变量警告。

#来源
https://atomgit.com/openeuler/kernel/commit/5778cba377f455091bd08762d83a8cedde593184